# voicecontroll

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  SESSION_SUMMARY.md  WORKING_SYSTEM_DOCUMENTATION.md  pyproject.toml  requirements.txt
.kiro/: README.md
.kiro/hooks/: security-check.md  test-on-save.md  update-docs.md
.kiro/specs/voice-platform-enhancements/: design.md  requirements.md  tasks.md
.kiro/specs/voice-platform-stability-enhancements/: design.md  requirements.md  tasks.md
.kiro/steering/: development.md  product.md  project-status.md  structure.md  tech.md  testing.md
agent/: agent_main.py  voice_processor.py
agent/prompts/: system_prompts.yaml
config/: advanced_voxtral.yaml  settings.py  voxtral.yaml
debian/: control  postinst
docs/: overview.md  whisper-capabilities.md
langraph/: workflows.py
models/: enhanced_whisper_engine.py  vllm_handler.py
scripts/: build_deb.sh  hotkey_manager.py  install.sh  install_debian13.sh  install_uv.sh  kill_tray.py  mock_vllm_server.py  service_manager.py  setup_autostart.sh  start_vllm_cpu.py  start_voxtral.sh  test_cursor_typing.py  test_enhanced_typing.py  test_hotkey_simple.py  test_system.py  test_voice_direct.py  test_voice_now.py  test_whisper_enhanced.py  tray_icon.py  voxtral_tray_gtk.py  voxtral_tray_stable.py
tools/: __init__.py  cursor_typing.py  enhanced_cursor_typing.py  shell.py  web_search.py
